--- a/src/app/shared/components/common/profile-box/profile-box.component.html
+++ b/src/app/shared/components/common/profile-box/profile-box.component.html
@@ -47,8 +47,7 @@
         </a>
         <h5>{{currentUser.email}}</h5>
         <div class="description">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </p>
+            <p>{{currentUser.interests}}</p>
         </div>
         <div class="counter-stats">
             <ul id="counter">
